[BLUECLERK-581] Tax & Update Discount Item API
- Add new updateDiscountItem API, on item controller and route

- Refactor codes to check if customer already have an active discount
item for the quantity

- Refactor codes to configure and save customer discount prices list

- Fix wrong wording of code documentation

- Update swagger accordingly
